# DiDt-Power-Proxy

./: .gitignore  FMA.cu  LICENSE  README.md
NVML_Monitor/: GraphTrace.py  Makefile  NVML_Monitor  NVML_Monitor.c  README.md
gemm_test/: CMakeLists.txt  CMakeLists_wo_ptx.txt  Power_Profiler.md  README.md  gpu_profile_20250305_073319.csv  gpu_profile_20250305_075111.csv  gpu_profile_20250308_024956.csv  nvml_gpu_profiler.c  plot_gpu_metrics.py  tf32_gemm_profile.csv
gemm_test/build_example/: CMakeCache.txt  Makefile  ampere_tf32_tensorop_gemm.ptx  cmake_install.cmake  tf32_gemm
gemm_test/build_wo_ptx/: CMakeCache.txt  Makefile  cmake_install.cmake  run_100.sh  tf32_gemm
instruction_pwr_eval/fma.rn.f32/: fma_benchmark  fma_benchmark.cu  fma_benchmark.ptx  gpu_profile_20250310_031827.csv  gpu_profile_20250310_032341.csv  run_3.sh
power_profiler/: gpu_profiler.py  nvml_gpu_profiler
